--- a/src/main/resources/static/trend.html
+++ b/src/main/resources/static/trend.html
@@ -12,7 +12,6 @@
 <script>
     var ctx = document.getElementById("myChart").getContext('2d');
     var data = {
-        labels: ["January", "February", "March", "April", "May", "June", "July"],
         datasets: [
             {
                 label: "Employee Happiness",
@@ -33,7 +32,25 @@
                 pointHoverBorderWidth: 2,
                 pointRadius: 1,
                 pointHitRadius: 10,
-                data: [1.3, 2, 1.4, 1.8, 1.4, 3, 3.4],
+                data: [{
+                    x: '2017-01-02',
+                    y: 1.3
+                }, {
+                    x: '2017-01-13',
+                    y: 2
+                }, {
+                    x: '2017-01-24',
+                    y: 1.4
+                }, {
+                    x: '2017-02-01',
+                    y: 1.8
+                }, {
+                    x: '2017-02-07',
+                    y: 1.4
+                }, {
+                    x: '2017-02-14',
+                    y: 3.4
+                }],
                 spanGaps: false
             }
         ]
@@ -51,14 +68,19 @@
                         min: 0,
                         stepSize: 0.5
                     }
+                }],
+                xAxes: [{
+                    type: 'time',
+                    position: 'bottom',
+                    time: {
+                        unit: 'month'
+                    }
                 }]
             }}
 
     });
 
 </script>
-
-
 
 </body>
 </html>
