Removed ELK stack and moved to MongoDB. Added teams, trends and graphing.

--- a/email/src/main/resources/happiness.html
+++ b/email/src/main/resources/happiness.html
@@ -68,17 +68,40 @@
                                 </td>
                             </tr>
                             <tr>
-                                <td style="padding:0 0 100px 0">
+                                <td style="padding:0 0 0 0">
                                 <table cellpadding="0" cellspacing="0" border="0" align="center">
                                     <tr>
-                                        <td style="width:200px; text-align: center">
-                                            <p style="font-size:84px;font-weight: bolder;color:#333"><a th:href="${request.ratingUrl}+'/'+${request.teamId}+'/1'">:-(</a></p>
+                                        <td style="text-align: center">
+                                            <p style="font-size:54px;font-weight: bolder;color:#333">:-(</p>
                                         </td>
-                                        <td style="width:200px; text-align: center">
-                                            <p style="font-size:84px;font-weight: bolder;color:#333"><a th:href="${request.ratingUrl}+'/'+${request.teamId}+'/3'">:-|</a></p>
+                                        <td style="text-align: center">
+                                            <p></p>
                                         </td>
-                                        <td style="width:200px; text-align: center">
-                                            <p style="font-size:84px;font-weight: bolder;color:#333"><a th:href="${request.ratingUrl}+'/'+${request.teamId}+'/5'">:-D</a></p>
+                                        <td style="text-align: center">
+                                            <p style="font-size:54px;font-weight: bolder;color:#333">:-|</p>
+                                        </td>
+                                        <td style="text-align: center">
+                                            <p></p>
+                                        </td>
+                                        <td style="text-align: center">
+                                            <p style="font-size:54px;font-weight: bolder;color:#333">:-D</p>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td style="text-align: center">
+                                            <p style="font-size:64px;font-weight: bolder; padding: 10px;"><a th:href="${request.ratingUrl}+'/'+${request.teamId}+'/1'"> 1 </a></p>
+                                        </td>
+                                        <td style="text-align: center">
+                                            <p style="font-size:64px;font-weight: bolder; padding: 10px;"><a th:href="${request.ratingUrl}+'/'+${request.teamId}+'/2'"> 2 </a></p>
+                                        </td>
+                                        <td style="text-align: center">
+                                            <p style="font-size:64px;font-weight: bolder; padding: 10px;"><a th:href="${request.ratingUrl}+'/'+${request.teamId}+'/3'"> 3 </a></p>
+                                        </td>
+                                        <td style="text-align: center">
+                                            <p style="font-size:64px;font-weight: bolder; padding: 10px;"><a th:href="${request.ratingUrl}+'/'+${request.teamId}+'/4'"> 4 </a></p>
+                                        </td>
+                                        <td style="text-align: center">
+                                            <p style="font-size:64px;font-weight: bolder; padding: 10px;"><a th:href="${request.ratingUrl}+'/'+${request.teamId}+'/5'"> 5 </a></p>
                                         </td>
                                     </tr>
                                 </table></td>
