--- a/email/src/main/resources/happiness.html
+++ b/email/src/main/resources/happiness.html
@@ -51,6 +51,7 @@
     </style>
 </head>
 <body>
+<h1>Team: <span th:text="${request.teamName}"></span></h1>
 <table cellpadding="0" cellspacing="0" border="0" id="backgroundTable">
     <tr>
         <td>
@@ -63,7 +64,7 @@
                                     <h3 style="margin:0;color: #444;line-height:100%;">
                                         <p>Your happiness is important to us and we'd really like to know how you feel working here.</p>
                                         <p>We'll send you an email each week and we'd appreciate your feedback by using the buttons below.</p>
-                                        <p>Feedback is anonymous with transparent results which are available to all <a th:href="${request.viewUrl}">here</a></p>
+                                        <p>Feedback is anonymous with transparent results which are available to all <a th:href="${request.viewUrl}/?team=${request.teamId}">here</a></p>
                                     </h3>
                                 </td>
                             </tr>
