--- a/email/src/main/resources/happiness.html
+++ b/email/src/main/resources/happiness.html
@@ -54,17 +54,17 @@
 <table cellpadding="0" cellspacing="0" border="0" id="backgroundTable">
     <tr>
         <td>
-            <h3>Team: <span th:text="${request.teamName}"></span></h3>
             <table cellpadding="0" cellspacing="0" border="0" align="center">
                 <tr>
                     <td width="900px" valign="top" style="background-color: #fff;padding: 10px">
                         <table style="margin-right: 10px;background-color: #f5f5f5">
                             <tr>
                                 <td style="padding:100px 100px 0 100px">
+                                    <h3>Team: <span th:text="${request.teamName}"></span></h3>
                                     <h3 style="margin:0;color: #444;line-height:100%;">
                                         <p>Your happiness is important to us and we'd really like to know how you feel working here.</p>
                                         <p>We'll send you an email each week and we'd appreciate your feedback by using the buttons below.</p>
-                                        <p>Feedback is anonymous with transparent results which are available to all <a th:href="${request.viewUrl}?team=${request.teamId}">here</a></p>
+                                        <p>Feedback is anonymous with transparent results which are available to all <a th:href="@{{viewUrl}(viewUrl=${request.viewUrl},team=${request.teamId})}">here</a></p>
                                     </h3>
                                 </td>
                             </tr>
